--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -304,13 +304,13 @@ h6.major {
 h1 {
   font-size: 2.25rem;
   line-height: 1.3;
-  letter-spacing: 0.5rem;
+  letter-spacing: 0.3rem;
 }
 
 h2 {
   font-size: 1.5rem;
   line-height: 1.4;
-  letter-spacing: 0.5rem;
+  letter-spacing: 0.25rem;
 }
 
 h3 {
@@ -1215,7 +1215,6 @@ button {
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
   transform: scale(1);
-  -webkit-backface-visibility: hidden;
   position: fixed;
   top: 0;
   left: 0;
@@ -1244,12 +1243,6 @@ button {
   -webkit-transition-delay: 0.75s;
   -ms-transition-delay: 0.75s;
   transition-delay: 0.75s;
-  background-image: linear-gradient(
-      to top,
-      rgba(19, 21, 25, 0.5),
-      rgba(19, 21, 25, 0.5)
-    ),
-    url("../../images/overlay.png");
   background-size: auto, 256px 256px;
   background-position: center, center;
   background-repeat: no-repeat, repeat;
@@ -1268,7 +1261,7 @@ button {
   -ms-transition: -ms-transform 0.325s ease-in-out,
     -ms-filter 0.325s ease-in-out;
   transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-  background-image: url("../../images/bg.jpg");
+  background-image: url("../../images/Moon\ Scenery.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1410,16 +1403,8 @@ body.is-preload #bg:before {
   display: none;
 }
 
-#header .logo {
-  width: 5.5rem;
-  height: 5.5rem;
-  line-height: 5.5rem;
-  border: solid 1px #ffffff;
-  border-radius: 100%;
-}
-
-#header .logo .icon:before {
-  font-size: 2rem;
+#header .icons {
+  padding: 0.5rem;
 }
 
 #header .content {
@@ -1443,7 +1428,7 @@ body.is-preload #bg:before {
   -webkit-transition-delay: 0.25s;
   -ms-transition-delay: 0.25s;
   transition-delay: 0.25s;
-  padding: 3rem 2rem;
+  padding: 1.5rem 2rem;
   max-height: 40rem;
   overflow: hidden;
 }
