--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1261,7 +1261,7 @@ button {
   -ms-transition: -ms-transform 0.325s ease-in-out,
     -ms-filter 0.325s ease-in-out;
   transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-  background-image: url("../../Images/Doppelsign.PNG");
+  background-image: url("../../Images/Moonset.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
